--- a/account/register.html
+++ b/account/register.html
@@ -29,6 +29,9 @@
 
 	  <label for="password">Mot de passe :</label>
 	  <input type="password" id="password" name="password" required />
+	  
+	  <label for="confirm-password">Confirmez le mot de passe :</label>
+	  <input type="password" id="confirm-password" name="confirm-password" required />
 
 	  <button type="submit">Créer mon compte</button>
 	  <p id="register-error" class="error-message"></p>
