--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h3>Contribution</h3>
     <img src="assets/icotheque/sephy-reporter-3.webp" alt="Sephy Reporter" class="contribute-img">
     <p>Ton aide serait précieuse pour rédiger de nouveaux articles sur Final Fantasy XIV !</p>
-    <a href="#" class="btn-contribuer">Contribuer</a>
+    <a href="#" id="contribuer-btn" class="btn-contribuer">✍️ Contribuer</a>
   </div>
     <div class="guides-box">
     <h3>📚 Guides</h3>
