--- a/article.html
+++ b/article.html
@@ -124,6 +124,7 @@
  </div>
 </section>
   <!-- FOOTER -->
+  <script src="/SephyLeaks/js/kofi.js" defer></script>
   <div data-include="components/footer.html"></div>
 
 </body>
