--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h3>Contribution</h3>
     <img src="assets/icotheque/sephy-reporter-3.webp" alt="Sephy Reporter" class="contribute-img">
     <p>Ton aide serait précieuse pour rédiger de nouveaux articles sur Final Fantasy XIV !</p>
-    <a href="#" id="contribuer-btn" class="btn-contribuer">✍️ Contribuer</a>
+    <a href="#" id="contribuer-btn" class="btn-contribuer">Contribuer</a>
   </div>
     <div class="guides-box">
     <h3>📚 Guides</h3>
@@ -87,7 +87,8 @@
   </div>
 </aside>
 </div>
-<div data-include="components/footer.html"></div>
+  <script src="/SephyLeaks/js/kofi.js" defer></script>
+  <div data-include="components/footer.html"></div>
 <script src="js/main.js" defer></script>
 <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
