--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,8 @@
 </div>
 </main>
 
-  <div data-include="/SephyLeaks/components/footer.html"></div>
+  <script src="/SephyLeaks/js/kofi.js" defer></script>
+  <div data-include="components/footer.html"></div>
   <script src="/SephyLeaks/js/include.js" defer></script>
   <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
