--- a/listing.html
+++ b/listing.html
@@ -57,6 +57,7 @@
 	<div id="pagination-controls" class="pagination-controls"></div>
   </main>
 
+  <script src="/SephyLeaks/js/kofi.js" defer></script>
   <div data-include="components/footer.html"></div>
   <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
