--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
 </aside>
 </div>
   <script src="/SephyLeaks/js/kofi.js" defer></script>
-  <div data-include="components/footer.html"></div>
+<footer>
+  <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
+  <span>SephyLeaks – Projet communautaire non officiel. </span>
+  <div id="kofi-container"></div> <!-- Placeholder -->
+</footer>
+
 <script src="js/main.js" defer></script>
 <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
