--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/include.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -89,8 +88,9 @@
 </div>
   
   <div data-include="components/footer.html"></div>
+<script src="js/include.js" defer></script>
 <script src="js/main.js" defer></script>
-<script src="/SephyLeaks/js/nav.js" defer></script>
-<script src="/SephyLeaks/js/kofi.js" defer></script>
+<script src="js/nav.js" defer></script>
+<script src="js/kofi.js" defer></script> <!-- toujours en dernier -->
 </body>
 </html>
