--- a/article.html
+++ b/article.html
@@ -8,9 +8,6 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/article.css">
   <script src="https://lds-img.finalfantasyxiv.com/pc/global/js/eorzeadb/loader.js?v3"></script>
-  <script src="js/include.js" defer></script>
-  <script src="js/main.js" defer></script>
-  <script src="/SephyLeaks/js/nav.js" defer></script>
   <script src="js/article.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
@@ -126,6 +123,9 @@
   <!-- FOOTER -->
 
   <div data-include="components/footer.html"></div>
-  <script src="/SephyLeaks/js/kofi.js" defer></script>
+<script src="js/include.js" defer></script>
+<script src="js/main.js" defer></script>
+<script src="js/nav.js" defer></script>
+<script src="js/kofi.js" defer></script> <!-- toujours en dernier -->
 </body>
 </html>
