--- a/listing.html
+++ b/listing.html
@@ -6,7 +6,6 @@
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/listing.js" defer></script>
-  <script src="js/include.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -59,7 +58,9 @@
 
 
   <div data-include="components/footer.html"></div>
-  <script src="/SephyLeaks/js/nav.js" defer></script>
-    <script src="/SephyLeaks/js/kofi.js" defer></script>
+<script src="js/include.js" defer></script>
+<script src="js/main.js" defer></script>
+<script src="js/nav.js" defer></script>
+<script src="js/kofi.js" defer></script> <!-- toujours en dernier -->
 </body>
 </html>
