--- a/pages/about.html
+++ b/pages/about.html
@@ -78,8 +78,9 @@
 
  
   <div data-include="components/footer.html"></div>
-  <script src="/SephyLeaks/js/include.js" defer></script>
-  <script src="/SephyLeaks/js/nav.js" defer></script>
-   <script src="/SephyLeaks/js/kofi.js" defer></script>
+<script src="js/include.js" defer></script>
+<script src="js/main.js" defer></script>
+<script src="js/nav.js" defer></script>
+<script src="js/kofi.js" defer></script> <!-- toujours en dernier -->
 </body>
 </html>
