--- a/pages/about.html
+++ b/pages/about.html
@@ -76,11 +76,8 @@
 </div>
 </main>
 
- 
-  <div data-include="components/footer.html"></div>
-<script src="js/include.js" defer></script>
-<script src="js/main.js" defer></script>
-<script src="js/nav.js" defer></script>
-<script src="js/kofi.js" defer></script> <!-- toujours en dernier -->
+  <div data-include="/SephyLeaks/components/footer.html"></div>
+  <script src="/SephyLeaks/js/include.js" defer></script>
+  <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
 </html>
