--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,11 @@
 </div>
 </main>
 
-  <div data-include="/SephyLeaks/components/footer.html"></div>
+<footer>
+  <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
+  <span>SephyLeaks – Projet communautaire non officiel. </span>
+  <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
+</footer>
   <script src="/SephyLeaks/js/include.js" defer></script>
   <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
