--- a/listing.html
+++ b/listing.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
 </head>
+<body>
 <header class="main-header">
   <div class="header-inner">
     <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
@@ -62,6 +63,7 @@
   <span>SephyLeaks – Projet communautaire non officiel. </span>
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
+
 <script src="js/include.js" defer></script>
 <script src="js/main.js" defer></script>
 <script src="js/nav.js" defer></script>
