--- a/listing.html
+++ b/listing.html
@@ -6,6 +6,7 @@
   <title>SephyLeaks – L’information libre d’Éorzéa</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/listing.js" defer></script>
+  <script src="js/include.js" defer></script>
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -27,7 +28,7 @@
     </div>
   </div>
 </header>
-
+<main>
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
   <ul class="nav-links">
@@ -57,15 +58,11 @@
 	<div id="pagination-controls" class="pagination-controls"></div>
   </main>
 
-
 <footer>
   <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
   <span>SephyLeaks – Projet communautaire non officiel. </span>
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
-
-<script src="js/include.js" defer></script>
-<script src="js/main.js" defer></script>
-<script src="js/nav.js" defer></script>
+  <script src="/SephyLeaks/js/nav.js" defer></script>
 </body>
 </html>
