--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,15 @@
 	<div class="apropos-box">
   <h3>Soutenir SephyLeaks</h3>
   <p>Ce site est libre, sans pub, mais pas sans café ! ☕<br>Soutiens le projet si tu l’aimes 💜</p>
-  <a href="https://ko-fi.com/tonprofil" target="_blank" class="kofi-button">💜 Me soutenir sur Ko-fi</a>
+</div>
+  <div class="kofi-embed">
+    <iframe id='kofiframe' 
+      src='https://ko-fi.com/sephyofficial/?hidefeed=true&widget=true&embed=true' 
+      style='border:none;width:100%;padding:4px;background:#2d2443;border-radius:10px;box-shadow:0 0 10px #0005;' 
+      height='700' 
+      title='💜 Me soutenir sur Ko-fi'>
+    </iframe>
+  </div>
 </div>
 <div class="apropos-box">
   <h3>Vers l’avenir</h3>
