--- a/account/register.html
+++ b/account/register.html
@@ -21,8 +21,8 @@
   <div class="register-wrapper">
     <h1>Créer un compte</h1>
 	<form id="register-form">
-	  <label for="username">Pseudonyme :</label>
-	  <input type="text" id="username" name="username" required />
+	  <label for="pseudo">Pseudonyme :</label>
+	  <input type="text" id="pseudo" name="pseudo" required />
 
 	  <label for="email">Adresse e-mail :</label>
 	  <input type="email" id="email" name="email" required />
