--- a/account/register.html
+++ b/account/register.html
@@ -37,13 +37,12 @@
 	  <p id="register-error" class="error-message"></p>
 	</form>
 
-    <p class="register-info">(Aucune base de données pour le moment. Stockage local uniquement.)</p>
-
     <p style="text-align:center; margin-top:1rem;">
       <a href="/SephyLeaks/account/login.html" style="color:#aaa;">← Déjà inscrit ? Se connecter</a>
     </p>
   </div>
 
-  <script src="/SephyLeaks/js/account/register.js"></script>
+  <script type="module" src="/SephyLeaks/js/account/register.js"></script>
+
 </body>
 </html>
