--- a/account/account.html
+++ b/account/account.html
@@ -6,7 +6,8 @@
   <title>Mon compte – SephyLeaks</title>
   <link rel="stylesheet" href="/SephyLeaks/css/style.css">
   <link rel="stylesheet" href="/SephyLeaks/css/account/account.css">
-  <script src="/SephyLeaks/js/account/account.js" defer></script>
+  <script type="module" src="/SephyLeaks/js/account/account.js"></script>
+
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="/SephyLeaks/assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/SephyLeaks/assets/icons/favicon-16x16.png">
