--- a/account/login.html
+++ b/account/login.html
@@ -29,6 +29,11 @@
 
     <button type="submit">Se connecter</button>
 	<p id="login-error" class="error-message"></p>
+
+<p style="text-align:center; margin-top:1rem;">
+  <a href="/SephyLeaks/account/register.html" style="color:#aaa;">← Pas encore de compte ? Créez-en un ici</a>
+</p>
+
     <p class="login-info">(Test local sans base de données. Stockage temporaire en localStorage.)</p>
   </form>
   <p style="text-align:center; margin-top:1rem;">
