--- a/account/login.html
+++ b/account/login.html
@@ -44,6 +44,7 @@
 
   </div>
 
-  <script src="/SephyLeaks/js/account/login.js"></script>
+<script type="module" src="/SephyLeaks/js/account/login.js"></script>
+
 </body>
 </html>
