--- a/article.html
+++ b/article.html
@@ -129,6 +129,7 @@
 </footer>
 <script src="js/include.js" defer></script>
 <script src="js/main.js" defer></script>
-<script src="js/nav.js" defer></script>
+<script type="module" src="/SephyLeaks/js/nav.js"></script>
+
 </body>
 </html>
