--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </footer>
 
 <script src="js/main.js" defer></script>
-<script src="/SephyLeaks/js/nav.js" defer></script>
+<script type="module" src="/SephyLeaks/js/nav.js"></script>
+
 </body>
 </html>
