--- a/listing.html
+++ b/listing.html
@@ -60,6 +60,6 @@
   <span>SephyLeaks – Projet communautaire non officiel. </span>
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
-  <script src="/SephyLeaks/js/nav.js" defer></script>
+<script type="module" src="/SephyLeaks/js/nav.js"></script>
 
 </html>
