--- a/editor.html
+++ b/editor.html
@@ -6,7 +6,8 @@
   <title>SephyLeaks – Éditeur d'article</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=EB+Garamond&family=Cormorant+Garamond&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/editor.css">
-  <script type="module" src="/SephyLeaks/js/editor.js"></script>
+  <script type="module" src="/SephyLeaks/js/admin/editor.js"></script>
+
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
