--- a/editor.html
+++ b/editor.html
@@ -143,7 +143,7 @@
 	  <section class="tool-group">
 			<h3>Export</h3>
 			<button id="export-json" class="format-btn">📄 Exporter JSON</button>
-			<button id="publish-article">📤 Publier l’article</button>
+			<button id="publish-article" class="format-btn">📤 Publier l’article</button>
 			<div id="edit-info" class="status-banner hidden">📝 Vous modifiez un brouillon existant</div>
 			<button id="clear-preview" class="format-btn">⚠️ Effacer l’aperçu</button>
 	  </section>
