--- a/editor.html
+++ b/editor.html
@@ -171,11 +171,13 @@
 </div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
+<aside>
 <div class="editor-main">
     <aside class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
     </aside>
   <div id="toast" class="toast-hidden"></div>
  </div>
+ </aside>
 </body>
 </html>
