--- a/editor.html
+++ b/editor.html
@@ -170,14 +170,14 @@
 	  <input type="text" id="resume" placeholder="Résumé de l’article">
 </div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
-</main>
-<aside>
+</div>
+
 <div class="editor-main">
     <aside class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
     </aside>
   <div id="toast" class="toast-hidden"></div>
  </div>
- </aside>
+ </main>
 </body>
 </html>
