--- a/editor.html
+++ b/editor.html
@@ -171,7 +171,7 @@
 </div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
-<div class="editor-main">
+<div class="editor-sidebar">
     <aside class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
     </aside>
