--- a/editor.html
+++ b/editor.html
@@ -171,11 +171,12 @@
 </div>
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
-<div class="editor-sidebar">
-    <aside class="editor-preview">
+<aside class="editor-sidebar">
+     <div class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
-    </aside>
+	   </div>
+    
   <div id="toast" class="toast-hidden"></div>
- </div>
+</aside>
 </body>
 </html>
