--- a/editor.html
+++ b/editor.html
@@ -172,10 +172,10 @@
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
 <aside class="editor-sidebar">
-     <div class="editor-preview">
+      <h2>🛠 Outils</h2> 
+     <section class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
-	   </div>
-    
+	 </section>
   <div id="toast" class="toast-hidden"></div>
 </aside>
 </body>
