--- a/editor.html
+++ b/editor.html
@@ -172,7 +172,7 @@
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
 <aside class="editor-sidebar">
-      <h2>🛠 Outils</h2> 
+      <h2>🛠 Preview de l'article</h2> 
      <section class="editor-preview">
       <div id="preview-content" class="preview-content">...</div>
 	 </section>
