--- a/editor.html
+++ b/editor.html
@@ -178,5 +178,18 @@
 	 </section>
   <div id="toast" class="toast-hidden"></div>
 </aside>
+
+<!-- Modale de confirmation personnalisée -->
+<div id="custom-confirm" class="json-modal hidden">
+  <div class="json-box">
+    <h3 id="confirm-title">❔ Confirmation</h3>
+    <p id="confirm-message">Êtes-vous sûr ?</p>
+    <div class="button-row">
+      <button id="confirm-yes" class="btn-primary">✅ Oui</button>
+      <button id="confirm-no" class="format-btn">❌ Non</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
