--- a/editor.html
+++ b/editor.html
@@ -185,7 +185,7 @@
     <h3 id="confirm-title">❔ Confirmation</h3>
     <p id="confirm-message">Êtes-vous sûr ?</p>
     <div class="button-row">
-      <button id="confirm-yes" class="btn-primary">✅ Oui</button>
+      <button id="confirm-yes" class="format-btn">✅ Oui</button>
       <button id="confirm-no" class="format-btn">❌ Non</button>
     </div>
   </div>
