--- a/editor.html
+++ b/editor.html
@@ -182,7 +182,7 @@
 <!-- Modale de confirmation personnalisée -->
 <div id="custom-confirm" class="json-modal hidden">
   <div class="json-box">
-    <h3 id="confirm-title">❔ Confirmation</h3>
+    <h3 id="confirm-title">Confirmation</h3>
     <p id="confirm-message">Êtes-vous sûr ?</p>
     <div class="button-row">
       <button id="confirm-yes" class="format-btn">✅ Oui</button>
