--- a/pages/about.html
+++ b/pages/about.html
@@ -40,6 +40,16 @@
 
 <main class="apropos-container">
   <div class="apropos-inner">
+<div class="apropos-site-box">
+  <h2>🛰️ À propos du site</h2>
+  <p>
+    <strong>SephyLeaks</strong> est un projet communautaire et non commercial dédié à <em>Final Fantasy XIV</em>. Le site propose des <strong>guides</strong>, <strong>chroniques</strong> et contenus originaux, dans le respect des conditions d’utilisation de <strong>Square Enix</strong>.
+  </p>
+  <p>
+    Toutes les contributions sont vérifiées, et les auteurs sont crédités. Le site ne contient ni publicité ni suivi invasif.
+  </p>
+</div>
+
     <div class="apropos-avatar-wrapper">
       <img src="/SephyLeaks/assets/sephy-avatar.webp" alt="Portrait de Sephy" class="apropos-avatar" />
     </div>
