--- a/editor.html
+++ b/editor.html
@@ -146,6 +146,7 @@
 			<button id="publish-article" class="format-btn">📤 Publier l’article</button>
 			<div id="edit-info" class="status-banner hidden">📝 Vous modifiez un brouillon existant</div>
 			<button id="clear-preview" class="format-btn">⚠️ Effacer l’aperçu</button>
+			<button id="delete-proposal" class="format-btn hidden">🗑 Supprimer le brouillon</button>
 	  </section>
     </aside>
 	
