--- a/account/account.html
+++ b/account/account.html
@@ -41,12 +41,13 @@
       <button class="edit-profile-btn">Modifier le profil</button>
     </section>
 
-    <nav class="account-tabs">
-      <button class="tab-btn active" data-tab="profile">Profil</button>
-      <button class="tab-btn" data-tab="articles">Articles</button>
-      <button class="tab-btn" data-tab="comments">Commentaires</button>
-      <button class="tab-btn" data-tab="settings">Paramètres</button>
-    </nav>
+<div class="account-tabs">
+  <button class="tab-link active">Profil</button>
+  <button class="tab-link">Articles</button>
+  <button class="tab-link">Commentaires</button>
+  <button class="tab-link">Paramètres</button>
+</div>
+
 
     <section class="tab-content" id="tab-profile">
       <h3>Biographie</h3>
