--- a/account/login.html
+++ b/account/login.html
@@ -31,13 +31,11 @@
 	<p id="login-error" class="error-message"></p>
 
 <p style="text-align:center; margin-top:1rem;">
-  <a href="/SephyLeaks/account/register.html" style="color:#aaa;">← Pas encore de compte ? Créez-en un ici</a>
+  <a href="/SephyLeaks/account/register.html" style="color:#aaa;">Pas encore de compte ? Créez-en un ici</a>
 </p>
-
-    <p class="login-info">(Test local sans base de données. Stockage temporaire en localStorage.)</p>
   </form>
   <p style="text-align:center; margin-top:1rem;">
-  <a href="/SephyLeaks/index.html" style="color:#aaa;">← Revenir à l’accueil</a>
+  <a href="/SephyLeaks/index.html" style="color:#aaa;">Revenir à l’accueil</a>
 </p>
 
     <div id="login-message" class="login-feedback"></div>
