--- a/account/account.html
+++ b/account/account.html
@@ -34,9 +34,11 @@
     <section class="account-header">
       <img src="/SephyLeaks/assets/placeholder-avatar.png" alt="Avatar" class="account-avatar" />
       <div class="account-info">
-        <h2>Sephy</h2>
-        <p>sephy@email.com</p>
-        <p class="account-role">Rôle : membre</p>
+ <div class="user-main">
+        <h2 id="user-pseudo">Pseudo</h2>
+        <p id="user-role">Rôle</p>
+        <p id="user-email">Email</p>
+      </div>
       </div>
       <button class="edit-profile-btn">Modifier le profil</button>
     </section>
