--- a/account/account.html
+++ b/account/account.html
@@ -76,18 +76,17 @@
       <h3>Paramètres du compte</h3>
       <button id="logout-btn">🔓 Se déconnecter</button>
     </section>
-	    <section id="edit-form-section" class="hidden">
+	
+    <section id="edit-form-section" class="hidden">
       <h3>Modifier mes informations</h3>
       <form id="profile-form">
         <label for="edit-bio">Bio :</label>
         <textarea id="edit-bio" name="bio" rows="4"></textarea>
-
         <button type="submit">💾 Enregistrer</button>
         <p id="profile-msg" class="status-msg"></p>
       </form>
     </section>
+	<section id="conditional-links"></section>
   </main>
-
-
 </body>
 </html>
