--- a/account/account.html
+++ b/account/account.html
@@ -44,10 +44,10 @@
     </section>
 
 <div class="account-tabs">
-  <button class="tab-link active">Profil</button>
-  <button class="tab-link">Articles</button>
-  <button class="tab-link">Commentaires</button>
-  <button class="tab-link">Paramètres</button>
+	<button class="tab-link" data-tab="profile">Profil</button>
+	<button class="tab-link" data-tab="articles">Articles</button>
+	<button class="tab-link" data-tab="comments">Commentaires</button>
+	<button class="tab-link" data-tab="settings">Paramètres</button>
 </div>
 
 
