--- a/account/account.html
+++ b/account/account.html
@@ -83,8 +83,8 @@
     <button class="close-btn" id="close-edit">✖</button>
     <h3>Modifier mon profil</h3>
     <form id="profile-form">
-      <label for="edit-avatar">Lien de l’avatar :</label>
-      <input type="text" id="edit-avatar" name="avatar_url" placeholder="https://..." />
+	  <label for="edit-avatar">Lien de l’avatar :</label>
+	  <input type="text" id="edit-avatar" name="avatar" placeholder="https://..." />
       
       <label for="edit-bio">Bio :</label>
       <textarea id="edit-bio" name="bio" rows="4" placeholder="Décris-toi..."></textarea>
