--- a/listing.html
+++ b/listing.html
@@ -29,6 +29,8 @@
 </header>
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
   <ul class="nav-links">
     <li><a href="/SephyLeaks/index.html">Accueil</a></li>
     <li><a href="/SephyLeaks/listing.html">Articles</a></li>
