--- a/pages/about.html
+++ b/pages/about.html
@@ -28,15 +28,17 @@
     </div>
   </header>
 
-  <nav class="main-nav">
-    <a href="/SephyLeaks/index.html" class="logo">SephyLeaks</a>
-    <ul class="nav-links">
+<nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
+  <ul class="nav-links">
     <li><a href="/SephyLeaks/index.html">Accueil</a></li>
     <li><a href="/SephyLeaks/listing.html">Articles</a></li>
 	<li><a href="#">Ressources</a></li>
     <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
-    </ul>
-  </nav>
+  </ul>
+</nav>
 
 <main class="apropos-container">
   <div class="apropos-inner">
@@ -99,6 +101,6 @@
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
   <script src="/SephyLeaks/js/include.js" defer></script>
-  <script src="/SephyLeaks/js/nav.js" defer></script>
+  <script type="module" src="/SephyLeaks/js/nav.js"></script>
 </body>
 </html>
