--- a/article.html
+++ b/article.html
@@ -34,14 +34,15 @@
 
 <nav class="main-nav">
   <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
   <ul class="nav-links">
     <li><a href="/SephyLeaks/index.html">Accueil</a></li>
     <li><a href="/SephyLeaks/listing.html">Articles</a></li>
 	<li><a href="#">Ressources</a></li>
-    <li><a href="/SephyLeaks/about.html">À propos</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
   </ul>
 </nav>
-  </header>
 
  <!-- CONTENU PRINCIPAL + SIDEBAR -->
 <div class="article-layout">
