--- a/account/account.html
+++ b/account/account.html
@@ -40,7 +40,8 @@
         <p id="user-email">Email</p>
       </div>
       </div>
-      <button id="edit-profile-btn">Modifier le profil</button>
+    <button id="edit-profile-btn" class="edit-profile-btn"> Modifier le profil
+</button>
     </section>
 
 <div class="account-tabs">
@@ -74,6 +75,7 @@
 
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
+	  <button id="conditional-links"></button>
       <button id="logout-btn">🔓 Se déconnecter</button>
     </section>
 	
@@ -94,8 +96,6 @@
     </form>
   </div>
 </div>
-
-	<section id="conditional-links"></section>
   </main>
 </body>
 </html>
