--- a/account/account.html
+++ b/account/account.html
@@ -32,7 +32,7 @@
   
    <main class="account-container">
     <section class="account-header">
-      <img id="account-avatar" src="/SephyLeaks/assets/default-avatar.png" alt="Avatar" class="account-avatar" />
+      <img id="account-avatar" src="/SephyLeaks/assets/default-avatar.webp" alt="Avatar" class="account-avatar" />
       <div class="account-info">
  <div class="user-main">
         <h2 id="user-pseudo">Pseudo</h2>
