--- a/account/account.html
+++ b/account/account.html
@@ -75,8 +75,8 @@
 
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
-	  <button id="conditional-links"></button>
-      <button id="logout-btn">🔓 Se déconnecter</button>
+	  <button id="conditional-links" class="format-btn"></button>
+      <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
     </section>
 	
 <!-- Overlay Modifier Profil -->
