--- a/account/account.html
+++ b/account/account.html
@@ -47,6 +47,7 @@
 <div class="account-tabs">
 	<button class="tab-link" data-tab="profile">Profil</button>
 	<button class="tab-link" data-tab="articles">Articles</button>
+	<button class="tab-link" data-tab="propositions">Propositions</button>
 	<button class="tab-link" data-tab="comments">Commentaires</button>
 	<button class="tab-link" data-tab="settings">Paramètres</button>
 </div>
@@ -67,6 +68,13 @@
       <h3>Mes articles</h3>
       <p>Liste de vos articles publiés...</p>
     </section>
+	
+	<section class="tab-content hidden" id="tab-propositions">
+	  <h3>Mes propositions</h3>
+	  <div id="proposition-list" class="card-scroll-row">
+		<p>Chargement en cours...</p>
+	  </div>
+	</section>
 
     <section class="tab-content hidden" id="tab-comments">
       <h3>Mes commentaires</h3>
