--- a/account/account.html
+++ b/account/account.html
@@ -83,7 +83,7 @@
 
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
-	  <button id="conditional-links" class="format-btn"></button>
+	  <button id="conditional-links"></button>
       <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
     </section>
 	
