--- a/account/account.html
+++ b/account/account.html
@@ -83,8 +83,10 @@
 
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
-	  <button id="conditional-links"></button>
-      <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
+		<div class="profile-actions">
+		  <a href="/SephyLeaks/admin.html" class="format-btn">🛠️ Panneau admin</a>
+		  <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
+		</div>
     </section>
 	
 <!-- Overlay Modifier Profil -->
