--- a/account/account.html
+++ b/account/account.html
@@ -84,7 +84,7 @@
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
 		<div class="profile-actions">
-		  <a href="/SephyLeaks/admin.html" class="format-btn">🛠️ Panneau admin</a>
+	      <div id="admin-actions" class="profile-actions"></div>
 		  <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
 		</div>
     </section>
