--- a/account/account.html
+++ b/account/account.html
@@ -76,10 +76,13 @@
 	  </div>
 	</section>
 
-    <section class="tab-content hidden" id="tab-comments">
-      <h3>Mes commentaires</h3>
-      <p>Liste de vos commentaires...</p>
-    </section>
+	<section class="tab-content hidden" id="tab-comments">
+	  <h3>Mes commentaires</h3>
+	  <div id="comment-list">
+		<p>Chargement en cours...</p>
+	  </div>
+	</section>
+
 
     <section class="tab-content hidden" id="tab-settings">
       <h3>Paramètres du compte</h3>
