--- a/article.html
+++ b/article.html
@@ -88,37 +88,12 @@
 <div class="comment-section">
 <section id="comments" class="comments-section">
   <h2>Commentaires</h2>
-
-  <!-- Liste de commentaires fictifs -->
-  <div class="comment">
-    <img src="assets/test.webp" alt="avatar joueur" class="comment-avatar">
-    <div class="comment-body">
-      <div class="comment-meta">
-        <span class="comment-author">Aelyna</span>
-        <span class="comment-date">15 avril 2025</span>
-      </div>
-      <p>Super guide, merci ! J'avais oublié les journaux de chasse… 🤦‍♀️</p>
-    </div>
-  </div>
-
-
-  <div class="comment">
-    <img src="assets/test.webp" alt="avatar joueur" class="comment-avatar">
-    <div class="comment-body">
-      <div class="comment-meta">
-        <span class="comment-author">Yugiri-sama</span>
-        <span class="comment-date">16 avril 2025</span>
-      </div>
-      <p>Est-ce que ça marche aussi en job magique ? 👀</p>
-    </div>
-  </div>
-
-  <!-- Formulaire désactivé -->
-  <div class="comment-form disabled">
-    <p class="login-warning">Vous devez être connecté pour commenter.</p>
-    <textarea placeholder="Connexion requise pour écrire un commentaire..." disabled></textarea>
-    <button disabled>Envoyer</button>
-  </div>
+<!-- Formulaire désactivé (sera remplacé dynamiquement si connecté) -->
+	<div class="comment-form disabled">
+	  <p class="login-warning">Vous devez être connecté pour commenter.</p>
+	  <textarea placeholder="Connexion requise pour écrire un commentaire..." disabled></textarea>
+	  <button disabled>Envoyer</button>
+	</div>
  </div>
 </section>
   <!-- FOOTER -->
@@ -130,6 +105,7 @@
 </footer>
 <script src="js/include.js" defer></script>
 <script src="js/main.js" defer></script>
+<script type="module" src="/SephyLeaks/js/comment.js"></script>
 <script type="module" src="/SephyLeaks/js/nav.js"></script>
 
 </body>
