--- a/article.html
+++ b/article.html
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
 </head>
-
+<body>
  <!-- HEADER + NAV -->
 <header class="main-header">
   <div class="header-inner">
