--- a/account/account.html
+++ b/account/account.html
@@ -30,6 +30,17 @@
     </div>
   </header>
   
+ <nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
+  <ul class="nav-links">
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
+  </ul>
+</nav> 
    <main class="account-container">
     <section class="account-header">
       <img id="account-avatar" src="/SephyLeaks/assets/default-avatar.webp" alt="Avatar" class="account-avatar" />
