--- a/editor.html
+++ b/editor.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/editor.css">
   <script type="module" src="/SephyLeaks/js/admin/editor.js"></script>
   <script type="module" src="/SephyLeaks/js/admin/editor-nav.js"></script>
+  <script src="https://lds-img.finalfantasyxiv.com/pc/global/js/eorzeadb/loader.js?v3"></script>
 
  <!-- Favicon de base -->
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
