--- a/admin/admin.html
+++ b/admin/admin.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="/SephyLeaks/css/admin/admin.css"/>
   <script type="module" src="/SephyLeaks/js/admin/admin.js" defer></script>
  <!-- Favicon de base -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
-  <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/SephyLeaks/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/SephyLeaks/assets/icons/favicon-16x16.png">
+  <link rel="shortcut icon" href="/SephyLeaks/assets/icons/favicon.ico" type="image/x-icon">
 
 <!-- Icône Apple / Android -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
-  <link rel="manifest" href="assets/icons/site.webmanifest">
-  <link rel="icon" type="image/png" sizes="192x192" href="assets/icons/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="assets/icons/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/SephyLeaks/assets/icons/apple-touch-icon.png">
+  <link rel="manifest" href="/SephyLeaks/assets/icons/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="192x192" href="/SephyLeaks/assets/icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/SephyLeaks/assets/icons/android-chrome-512x512.png">
 </head>
 
 <body>
