--- a/article.html
+++ b/article.html
@@ -97,6 +97,17 @@
 	</div>
  </div>
 </section>
+
+<div class="custom-dialog">
+  <div class="dialog-box">
+    <p>Supprimer ce commentaire ?</p>
+    <div class="dialog-buttons">
+      <button class="cancel-btn">Annuler</button>
+      <button class="confirm-btn">Supprimer</button>
+    </div>
+  </div>
+</div>
+
   <!-- FOOTER -->
 
 <footer>
