--- a/article.html
+++ b/article.html
@@ -98,16 +98,15 @@
  </div>
 </section>
 
-
-  <!-- FOOTER -->
+<!-- FOOTER -->
 
 <footer>
   <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
   <span>SephyLeaks – Projet communautaire non officiel. </span>
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
-<script src="js/include.js" defer></script>
-<script src="js/main.js" defer></script>
+<script type="module" src="/SephyLeaks/js/include.js" defer></script>
+<script type="module" src="/SephyLeaks/js/main.js" defer></script>
 <script type="module" src="/SephyLeaks/js/comment.js"></script>
 <script type="module" src="/SephyLeaks/js/nav.js"></script>
 
