--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
 </footer>
 
-<script src="js/main.js" defer></script>
+<script type="module" src="/SephyLeaks/js/main.js" defer></script>
 <script type="module" src="/SephyLeaks/js/nav.js"></script>
 
 </body>
