--- a/article.html
+++ b/article.html
@@ -65,9 +65,10 @@
   <aside class="sidebar">
 
     <!-- 🔍 Barre de recherche -->
-    <section class="search-box">
-      <input type="text" placeholder="Rechercher..." />
-    </section>
+	<section class="search-box">
+	  <input id="search-input" type="text" placeholder="Rechercher..." />
+	</section>
+
 
     <!-- 🎥 Vidéo intégrée -->
     <section class="video-box">
@@ -109,6 +110,7 @@
 <script type="module" src="/SephyLeaks/js/main.js" defer></script>
 <script type="module" src="/SephyLeaks/js/comment.js"></script>
 <script type="module" src="/SephyLeaks/js/nav.js"></script>
+<script src="/SephyLeaks/js/search.js" defer></script>
 
 </body>
 </html>
