--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     <a href="#" id="contribuer-btn" class="btn-contribuer">Contribuer</a>
   </div>
     <div class="guides-box">
+    <h3>Recherche</h3> 
+	<div class="search-box">
+	  <input id="search-input" type="text" placeholder="Rechercher..." />
+	</div>
+	<hr></hr>
     <h3>📚 Guides</h3>
     <div class="tag-list">
       <span class="guide-tag">Jobs</span>
@@ -87,6 +92,7 @@
   </div>
 </aside>
 </div>
+
 <footer>
   <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
   <span>SephyLeaks – Projet communautaire non officiel. </span>
@@ -95,6 +101,6 @@
 
 <script type="module" src="/SephyLeaks/js/main.js" defer></script>
 <script type="module" src="/SephyLeaks/js/nav.js"></script>
-
+<script src="/SephyLeaks/js/search.js" defer></script>
 </body>
 </html>
