--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div class="search-box">
 	  <input id="search-input" type="text" placeholder="Rechercher..." />
 	</div>
-	<hr></hr>
+	<div></div>
     <h3>📚 Guides</h3>
     <div class="tag-list">
       <span class="guide-tag">Jobs</span>
