--- a/listing.html
+++ b/listing.html
@@ -40,6 +40,11 @@
 </nav>
 <body>
   <main>
+	<div id="search-result-info" class="search-info" style="display: none;">
+	  <p>Résultats pour : <strong id="search-query-label"></strong></p>
+	  <button id="clear-search-btn" class="reset-button">🔄 Réinitialiser</button>
+	</div>
+
 	<div class="listing-controls">
 	  <div class="search-bar">
 		<input type="text" id="search-input" placeholder="🔍 Rechercher un article...">
