--- a/account/account.html
+++ b/account/account.html
@@ -75,10 +75,12 @@
       <p>Commentaires : 0</p>
     </section>
 
-    <section class="tab-content hidden" id="tab-articles">
-      <h3>Mes articles</h3>
-      <p>Liste de vos articles publiés...</p>
-    </section>
+	<section class="tab-content hidden" id="tab-articles">
+	  <h3>Mes articles</h3>
+	  <div id="published-articles-list" class="card-scroll-row">
+	  <p>Chargement en cours...</p>
+		 </div>
+	</section>
 	
 	<section class="tab-content hidden" id="tab-propositions">
 	  <h3>Mes propositions</h3>
