--- a/account/account.html
+++ b/account/account.html
@@ -70,9 +70,9 @@
       <p id="user-bio">Chargement de la bio...</p>
 	  </div>
       <h3>Informations</h3>
-      <p>Inscription : 24 avril 2024</p>
-      <p>Articles publiés : 0</p>
-      <p>Commentaires : 0</p>
+		<p id="join-date">Inscription : ...</p>
+		<p id="article-count">Articles publiés : ...</p>
+		<p id="comment-count">Commentaires : ...</p>
     </section>
 
 	<section class="tab-content hidden" id="tab-articles">
