--- a/admin/admin.html
+++ b/admin/admin.html
@@ -19,19 +19,30 @@
   <link rel="icon" type="image/png" sizes="512x512" href="/SephyLeaks/assets/icons/android-chrome-512x512.png">
 </head>
 
-  <header class="main-header">
-    <div class="header-content">
-      <h1>🛠️ Panneau d’administration</h1>
-      <nav class="admin-nav">
-        <a href="/SephyLeaks/index.html">Accueil</a>
-        <a href="/SephyLeaks/articles.html">Articles</a>
-        <a href="/SephyLeaks/account.html">Mon Compte</a>
-        <a href="/SephyLeaks/admin/admin.html" class="active">Admin</a>
-      </nav>
+ <!-- HEADER + NAV -->
+<header class="main-header">
+  <div class="header-inner">
+    <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
+    <div class="site-title-group">
+      <h1>Panneau Administrateur</h1>
+      <div class="subtitle">🛠️ Panneau d’administration</div>
     </div>
-    <p class="subtitle">Validation des propositions en attente</p>
-  </header>
-  
+  </div>
+   <p class="subtitle">Validation des propositions en attente</p>
+</header>
+
+<nav class="main-nav">
+  <a href="index.html" class="logo">SephyLeaks</a>
+  <input type="checkbox" id="menu-toggle" class="menu-toggle">
+  <label for="menu-toggle" class="burger">☰</label>
+  <ul class="nav-links">
+    <li><a href="/SephyLeaks/index.html">Accueil</a></li>
+    <li><a href="/SephyLeaks/listing.html">Articles</a></li>
+	<li><a href="#">Ressources</a></li>
+    <li><a href="/SephyLeaks/pages/about.html">À propos</a></li>
+  </ul>
+</nav>
+
 <body>
   <main class="admin-container">
     <section id="propositions-container">
