--- a/admin/admin.html
+++ b/admin/admin.html
@@ -22,7 +22,7 @@
  <!-- HEADER + NAV -->
 <header class="main-header">
   <div class="header-inner">
-    <img src="assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
+    <img src="/SephyLeaks/assets/logoSL.webp" alt="Logo SephyLeaks" class="site-logo">
     <div class="site-title-group">
       <h1>Panneau Administrateur</h1>
       <div class="subtitle">🛠️ Panneau d’administration</div>
