--- a/admin/admin.html
+++ b/admin/admin.html
@@ -26,8 +26,8 @@
     <div class="site-title-group">
       <h1>Panneau Administrateur</h1>
       <div class="subtitle">🛠️ Panneau d’administration</div>
+	  <div  class="subtitle">Validation des propositions en attente</div>
     </div>
-	   <p class="subtitle">Validation des propositions en attente</p>
   </div>
 </header>
 
