--- a/account/account.html
+++ b/account/account.html
@@ -98,7 +98,7 @@
 
 
     <section class="tab-content hidden" id="tab-settings">
-      <h3>Paramètres du compte</h3>
+      <h3>Modules et déconnexion</h3>
 		<div class="profile-actions">
 	      <div id="admin-actions" class="profile-actions"></div>
 		  <button id="logout-btn" class="format-btn">🔓 Se déconnecter</button>
@@ -123,6 +123,12 @@
     </form>
   </div>
 </div>
-  </main>
+</main>
 </body>
+<footer>
+  <a href="/SephyLeaks/components/feed.xml" target="_blank" class="rss-link" title="S’abonner au flux RSS">📡 Flux RSS</a>
+  <span>SephyLeaks – Projet communautaire non officiel. </span>
+  <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Aidez nous sur SephyLeaks', '#c573f5', 'Y8Y41E6NZ8');kofiwidget2.draw();</script> 
+</footer>
+<script type="module" src="/SephyLeaks/js/nav.js"></script>
 </html>
