--- a/editor.html
+++ b/editor.html
@@ -39,6 +39,8 @@
 
 <div class="slider-container hidden" id="my-proposals">
   <div class="slider-track" id="proposal-track">
+  <div id="status-badge-container" class="status-badge"></div>
+
     <!-- Cartes de propositions générées dynamiquement -->
   </div>
 </div>
@@ -154,6 +156,11 @@
 
 <main class="editor-main">
       <div class="editor-bar">
+	  <div id="status-badge-container" class="status-badge"></div>
+		<div id="refusal-message" class="refusal-box hidden">
+		  <span id="refusal-text">...</span>
+		  <button id="toggle-refusal" class="format-btn small">🔽 Masquer</button>
+		</div>
         <input type="text" id="title" placeholder="Titre...">
         <select id="tag">
 		  <option value="">-- Choisir un tag --</option>
