--- a/editor.html
+++ b/editor.html
@@ -178,12 +178,14 @@
       <textarea id="content" placeholder="Rédige ton article ici..."></textarea>
 </main>
 <aside class="editor-sidebar">
-      <h2>🛠 Preview de l'article</h2> 
-     <section class="editor-preview">
-      <div id="preview-content" class="preview-content">...</div>
-	 </section>
+  <h2>🛠 Preview de l'article</h2> 
+  <section class="editor-preview">
+    <div id="status-badge-container" style="margin-bottom: 0.5rem;"></div>
+    <div id="preview-content" class="preview-content">...</div>
+  </section>
   <div id="toast" class="toast-hidden"></div>
 </aside>
+
 
 <!-- Modale de confirmation personnalisée -->
 <div id="custom-confirm" class="json-modal hidden">
