--- a/admin/admin.html
+++ b/admin/admin.html
@@ -48,6 +48,8 @@
     <section id="propositions-container">
       <p>Chargement des propositions…</p>
     </section>
+<button class="preview-btn" data-id="${p.id}">👁️ Prévisualiser</button>
+
   </main>
   
     <!-- Modal de refus -->
