--- a/account/account.html
+++ b/account/account.html
@@ -31,7 +31,7 @@
   </header>
   
  <nav class="main-nav">
-  <a href="index.html" class="logo">SephyLeaks</a>
+  <a href="/SephyLeaks/index.html" class="logo">SephyLeaks</a>
   <input type="checkbox" id="menu-toggle" class="menu-toggle">
   <label for="menu-toggle" class="burger">☰</label>
   <ul class="nav-links">
