--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h2>Derniers articles</h2>
   <ul id="latest-list"></ul>
 </section>
-	<section id="filters"">
+	<section id="filters">
 	  <!-- Les boutons seront générés dynamiquement -->
 	</section>
     <section id="articles-container">
